# twitch_polling_gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  celery.Dockerfile  celery_worker.Dockerfile  docker-compose-dev.yml  docs_api.Dockerfile  index.html  makefile  polling_api.Dockerfile  pyproject.toml  user_management.Dockerfile  users_api.Dockerfile
deploy/docker/: celery_worker.sh  docs_api.sh  nginx.conf  polling_api.sh  users_api.sh
deploy/docker/pushpin/: pushpin.conf  routes
deploy/docker/twitch_api_celery_worker/: entrypoint.sh
deploy/envs/: celery.env  celery_worker.env  docs_api.env  jwt.env  polling_api.env  polling_db.env  polling_server.env  users_api.env  users_server.env
deploy/envs/polling_api/: celery.env
deploy/envs/user_management/: database.env  server.env
docs_api/: pyproject.toml
docs_api/src/: main.py
polling_api/: main.py  routes.py
polling_api/core/: celery.py  checks.py  config.py  events.py  middleware.py  pagination.py  tasks.py
polling_api/database/: configs.py
polling_api/database/migrations/: env.py
polling_api/database/migrations/versions/: 2025-07-13_0822d523a0ca.py  2025-07-29_2c58de6c2ef2.py
polling_api/polls/: depends.py  models.py  routes.py  services.py  tasks.py
polling_api/users/: depends.py  models.py  routes.py  services.py  tasks.py
twitch_polling_api/: main.py  routes.py
twitch_polling_api/core/: celery.py  config.py  lifespan.py  middleware.py  pagination.py
twitch_polling_api/database/: configs.py
twitch_polling_api/database/migrations/: env.py
twitch_polling_api/polls/: depends.py  models.py  routes.py  services.py  tasks.py
twitch_polling_api/users/: depends.py  models.py  routes.py  tasks.py
twitch_user_management/: .dockerignore  pyproject.toml
twitch_user_management/src/root/: gunicorn.py  schema.py
twitch_user_management/src/root/settings/: __init__.py  base.py
twitch_user_management/src/users/: admin.py  apps.py  models.py  signals.py
twitch_user_management/src/users/migrations/: 0001_initial.py
users_api/src/: manage.py
users_api/src/root/: celery.py  exceptions.py  health_check.py  loggers.py  pagination.py  renderers.py  urls.py
users_api/src/root/settings/: base.py  dev.py  prod.py
users_api/src/users/: managers.py  models.py  signals.py  urls.py
users_api/src/users/api/v1/: serializers.py  urls.py
users_api/src/users/migrations/: 0002_user_created_at_user_updated_at.py
