[project]
name = 'gateway_docs_api'
version = '0.1.0'
description = 'Gateway Api'
keywords = [
  'gateway',
  'api',
]
maintainers = [{name = 'Ali Abharya', email = 'abharya.dev@gmail.com'}]
authors = [{name = 'Ali Abharya', email = 'abharya.dev@gmail.com'}]
requires-python = '>=3.11'

dependencies = [
    'fastapi[standard]',
    'pydantic[email]',
    'pydantic-settings',
    'aiohttp',
    'typer',
    'rich',
]

[tool.uv]
dev-dependencies = [
    # unit test
    # code quality
    'pre-commit>=3.8.0',
    'ruff>=0.6.4',
]

[tool.ruff]
exclude = [
    '.eggs',
    '.git',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'build',
    'dist',
    'node_modules',
    'migrations',
    'settings',
    'site-packages',
    'venv',
    'post_views_pb2_grpc.py',
    'post_views_pb2.py'
]
src = ['docs_api']
include = ['*.py']
line-length = 120
output-format = 'grouped'
target-version = 'py311'

[tool.ruff.lint]
# S = Bandit Security
# SIM = Simplify
# E = Pycodestyle Error
# F = Pyflask
# C4 = Comprehensions
# BLE = Blind Exception
# I = Isort
# B = Flake8 Bugbear
select = ['S', 'SIM', 'C4', 'E', 'F', 'BLE', 'I', 'B', 'N', 'ERA']
ignore = ['E501', 'N802', 'N806', 'N815']
fixable = ['I']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']
'*test*.py' = ['S']
'*factories*.py' = ['S']

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true
